src/Ubora.Web/Styles/page_components/workpackage_list.scss
/*First level menu style*/
.list-sidebar li {
    list-style-type: none;
    margin-top: .4rem;
    margin-bottom: .4rem;
}

.list-sidebar a {
  color: $blue;
}

.list-sidebar img{
  width: 2rem;
}

.list-sidebar span{
  margin-left: .5rem;
}


/*Second level menu style*/
.side-menu-secondary {
  padding-left: .6rem;
}

    .side-menu-secondary li {
        margin-top: .1rem;
        margin-bottom: .1rem;
    }

    .side-menu-secondary span {
      margin-left: 1.2rem;
    }


/*Secondary, third and fourth level menu images style*/
.side-menu-secondary img ,
.side-menu-tertiary img,
.side-menu-quaternary img {
    width: .75rem;
}


/*Statuses styles*/
a.muted-status {
    color: $tertiary-shade;
    text-decoration: none;
    cursor: default;
}

a.active-status {
  color: $light-blue;
}

a.checked-status {
  color: $green;
}


/*wp sidemenu for smaller devices*/
.wp-sidemenu-md {
    background-color: $quartinary-shade;
    padding: .2rem 1rem;
    width: 100%;

    button.btn-icon {
        color: $blue;

        .material-icons {
            font-size: 180%;
        }

        &:focus {
            box-shadow: none;
        }
    }



    .modal {
        &.modal-left-pane {
            &.show .modal-dialog {
                transform: translate(0, 0);
            }

            .modal-dialog {
                transform: translate(-100%, 0);
            }
        }

        &.fade.in .modal-dialog {
            left: 0;
        }

        .modal-dialog {
            margin-left: 0;
            margin-top: 0;
            width: 50%;
            height: 100%;

            .modal-content {
                border-radius: 0;
                border: none;
                height: 100%;
                overflow-y: auto;

                .modal-header {
                    padding: .5rem 1rem;
                }

                .modal-body {
                    padding-top: 0;

                    ul.list-sidebar {
                        padding-left: 0;
                        font-size: 14px;

                        li {
                            margin-top: 1rem;
                            margin-bottom: 1rem;
                        }

                        img {
                            width: 1.3rem
                        }

                        .side-menu-secondary img,
                        .side-menu-tertiary img,
                        .side-menu-quaternary img {
                            width: .5rem;
                        }

                        .side-menu-secondary li {
                            font-weight: normal;
                        }

                        .side-menu-secondary span {
                            margin-left: .6rem;
                        }

                        .side-menu-tertiary {
                            padding-left: 1.6rem;
                        }

                        .side-menu-quaternary {
                            padding-left: 1.6rem;
                        }
                    }
                }
            }
        }
    }
}


    @media (max-width: 620px) {
        .wp-sidemenu-md {
            .modal {
                .modal-dialog {
                    width: 80%;
                }
            }
        }
    }

    @media (min-width: 992px) {
        .wp-sidemenu-md {
            display: none;
        }
    }

    @media (max-width: 991px) {
        .wp-sidemenu {
            display: none;
        }
    }

